--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/habitchecker
+MONGO_URI=mongodb+srv://gabricap7:MaKfX41qQrjYin14@cluster0.x6wkzhq.mongodb.net/
 JWT_SECRET=yourSuperSecretJWTkey
 PORT=5000
